Добавлен модуль javafx, сделан UI и DockerFile.